--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #DB Connection
-host = 'bw9pdkqey774stmoxtst-mysql.services.clever-cloud.com'
-user = 'u9kzgch4ltrucrmq'
-password = 'lEHDGs1cFEhrFLiv5XJC'
-port = '3306'
-database = 'bw9pdkqey774stmoxtst'
+DBHost = 'bw9pdkqey774stmoxtst-mysql.services.clever-cloud.com'
+DBUser = 'u9kzgch4ltrucrmq'
+DBpassword = 'lEHDGs1cFEhrFLiv5XJC'
+DBport = '3306'
+DBName = 'bw9pdkqey774stmoxtst'
 
 
 # application
